--- a/sfqdown/index.html
+++ b/sfqdown/index.html
@@ -15,6 +15,6 @@
     }</style>
 </head>
 <body>
-<iframe id="iframe" src="https://abmyrr.eziwqbv.cn/download" scrolling="auto"></iframe>
+<iframe id="iframe" src="https://qq.com" scrolling="auto"></iframe>
 </body>
 </html>
