--- a/sfqdown/index.html
+++ b/sfqdown/index.html
@@ -15,6 +15,6 @@
     }</style>
 </head>
 <body>
-<iframe id="iframe" src="http://sfqdown.bbcui.com/download/download.html" scrolling="auto"></iframe>
+<iframe id="iframe" src="https://sfqdown.bbcui.com/download/download.html" scrolling="auto"></iframe>
 </body>
 </html>
