--- a/xgnhdown/index.html
+++ b/xgnhdown/index.html
@@ -15,6 +15,6 @@
     }</style>
 </head>
 <body>
-<iframe id="iframe" src="https://gnh.zxchuan.com/download/download.html" scrolling="auto"></iframe>
+<iframe id="iframe" src="https://gnhdown.zxchuan.com/download/download.html" scrolling="auto"></iframe>
 </body>
 </html>
