--- a/dsddowm/index.html
+++ b/dsddowm/index.html
@@ -15,6 +15,6 @@
     }</style>
 </head>
 <body>
-<iframe id="iframe" src="https:/dsddown.bbcui.com/download/download.html" scrolling="auto"></iframe>
+<iframe id="iframe" src="https://dsddown.bbcui.com/download/download.html" scrolling="auto"></iframe>
 </body>
 </html>
