--- a/wlddown/index.html
+++ b/wlddown/index.html
@@ -15,6 +15,6 @@
     }</style>
 </head>
 <body>
-<iframe id="iframe" src="https://wld.svakkbo.com/download/download.html" scrolling="auto"></iframe>
+<iframe id="iframe" src="https://wlddown.svakkbo.com/download/download.html" scrolling="auto"></iframe>
 </body>
 </html>
